<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="14dp"
                android:text="@string/about"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:text="@string/skySpace"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="19dp"
                android:text="@string/version"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:text="@string/version_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="28dp"
                android:text="@string/lastUpdate" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:text="@string/lastUpdateDate"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView"
                android:layout_below="@+id/textView12"
                android:layout_marginTop="59dp"
                android:text="@string/created_by" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_toEndOf="@+id/textView12"
                android:text="@string/alao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="28dp"
                android:text="@string/appreciations" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView6"
                android:layout_below="@+id/textView10"
                android:text="@string/adeolu"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:text="@string/uthu"
                android:textStyle="bold"/>


        </RelativeLayout>



    </android.support.v7.widget.CardView>


</LinearLayout>