<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/confirmationDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/sureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_below="@+id/sureText"
                android:layout_marginTop="15dp"
                android:text="@string/no"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/noBtn"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:text="@string/yes"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>